# cohere-note-search

./: .gitignore  README.md  note-search.py  pyproject.toml
lib/: obsidian_helpers.py
